[metadata]
author = Dwight Hubbard
author_email = dhubbard@yahoo-inc.com
classifier =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Operating System :: POSIX
    Operating System :: POSIX :: Linux
    Operating System :: POSIX :: SunOS/Solaris
    Operating System :: MacOS :: MacOS X
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: Implementation :: CPython
    Topic :: System :: Systems Administration
    Topic :: Utilities
description = Python module to generate lists of hosts from various sources that is extensible via plugins.
keywords = hostlist, utility
license = Apache Software License
long_description = file:README.md
long_description_content_type = text/markdown
name = hostlists
project_urls =
	Documentation = https://yahoo.github.io/hostlists/
	Source = https://github.com/yahoo/hostlists
	CI Pipeline = https://cd.screwdriver.cd/pipelines/3816
url = https://github.com/yahoo/hostlists
version = 0.10.0

[options]
install_requires =
    dnspython
    requests
packages =
    hostlists
    hostlists.plugins
    hostlists_plugins_default
python_requires = >="3.9"
zip_safe = True

[options.entry_points]
console_scripts =
    hostlists=hostlists.cli:main
hostlists_plugins =
    dns=hostlists_plugins_default.hostlists_plugin_dns:HostlistsPluginDns
    file=hostlists_plugins_default.hostlists_plugin_file:HostlistsPluginFile
    range=hostlists_plugins_default.range:HostlistsPluginRange

[build_sphinx]
source-dir = docs/source
build-dir  = docs/build
all_files  = 1

[pycodestyle]
count = False
ignore = E1,E2,E3,E4,E5,W293,E226,E302,E41
max-line-length = 160
statistics = True

[upload_sphinx]
upload-dir = docs/build/html

[screwdrivercd.version]
version_type = sdv4_SD_BUILD
